appcds/javaldr/ExceptionDuringDumpAtObjectsInitPhase.java test failed resulting in VM crash

XMLWordPrintable

    • b23
    • x86_64
    • linux

      Portion of the hs err log:
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/opt/mach5/mesos/work_dir/slaves/47535081-0322-4d83-bb78-f7e11abb86d0-S42707/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/450747c0-915b-40d1-bfa6-5cb29dc03626/runs/50b7af32-d58d-4cc6-8d82-add33d7de943/workspace/open/src/hotspot/share/runtime/mutex.cpp:40), pid=3491848, tid=3491866
      # fatal error: VM thread could block on lock that may be held by a JavaThread during safepoint: Heap_lock
      #
      # JRE version: Java(TM) SE Runtime Environment (16.0+23) (fastdebug build 16-ea+23-1401)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 16-ea+23-1401, interpreted mode, tiered, compressed oops, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x1494986] Mutex::check_safepoint_state(Thread*)+0x176

      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x1494986] Mutex::check_safepoint_state(Thread*)+0x176
      V [libjvm.so+0x1496d53] Mutex::lock(Thread*)+0x13
      V [libjvm.so+0xe1385e] vm_exit(int)+0xfe
      V [libjvm.so+0xd7b25e] HeapShared::archive_heap_object(oop, Thread*)+0x2ae
      V [libjvm.so+0x1711b56] StringTable::create_archived_string(oop, Thread*)+0xb6
      V [libjvm.so+0x17120c9] StringTable::write_to_archive(DumpedInternedStrings const*)+0x179
      V [libjvm.so+0xd82803] HeapShared::copy_closed_archive_heap_objects(GrowableArray<MemRegion>*)+0xa3
      V [libjvm.so+0xd82da1] HeapShared::archive_java_heap_objects(GrowableArray<MemRegion>*, GrowableArray<MemRegion>*)+0x91
      V [libjvm.so+0x14127ce] VM_PopulateDumpSharedSpace::dump_java_heap_objects()+0x38e
      V [libjvm.so+0x141973b] VM_PopulateDumpSharedSpace::doit()+0x1eb
      V [libjvm.so+0x1930dda] VM_Operation::evaluate()+0x18a
      V [libjvm.so+0x19545bf] VMThread::evaluate_operation(VM_Operation*)+0x17f
      V [libjvm.so+0x1955088] VMThread::inner_execute(VM_Operation*)+0x1f8
      V [libjvm.so+0x19552c5] VMThread::loop()+0xb5
      V [libjvm.so+0x19553fa] VMThread::run()+0xca
      V [libjvm.so+0x18401b0] Thread::call_run()+0x100
      V [libjvm.so+0x1531d86] thread_native_entry(Thread*)+0x116


            Assignee:
            Yumin Qi
            Reporter:
            Calvin Cheung (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: